# Haskell-Programming-from-First-Principles

./: .gitignore  ch7.hs
First-principles/ch15/semigroups/: semigroups.cabal
ch19/shortUrl/: shortUrl.cabal
ch19/shortUrl/.stack-work/install/6db3355d/flag-cache/: aeson-1.4.0.0-9qocgF0L1hMCALuRKJUnP2  ansi-terminal-0.8.0.4-8q4o8UwD6sO3jQwHPHf7u  asn1-parse-0.9.4-EYYZzBg5L2eHSldSNnwQRN  attoparsec-0.13.2.2-1K6XHSMqGc57rQNrMtvLTm  base-compat-0.10.1-I0duA57O7WcBf3VDFpA62T  case-insensitive-1.2.0.11-6v1PL4i0FmaC1BirxkXJub  cereal-0.5.5.0-4mI7cH76utd5msQR92JWfO  conduit-extra-1.3.0-5CoXfl7AKXAIoAIUDVmSIJ  cookie-0.4.4-LNXu7Vq6XJ39z40mdjLSNY  cryptonite-0.25-HUSUXmfJTZfKtL2BBWx80G  easy-file-0.2.2-2Yr0OQ3DZyN66Ra7zEXrxK  errors-2.3.0-3CDzjVXTc5r8HsuiAy2P9V  fast-logger-2.4.11-DZQI4qTy1P28LrxQ2PREOY  foundation-0.0.20-Ju3vfhgaJmMEdMuDaMqLXl  hashable-1.2.7.0-ExYn3eXYSfg8Z5H8Kwbxlo  hedis-0.10.2-BnCuzaldMSLJHShrgLxvXV  hourglass-0.2.11-kRAxBgUIAyLwrHsPAnPri  http-types-0.12.1-ILi0zHeDNM69IIalWnNAKy  http2-1.6.3-As8qRNlCYhvKoVyBKYzYeS  iproute-1.7.5-JUpEDeha6POIrVjaJeDsr  lifted-base-0.2.3.12-KUpY4exKiQi3lxKPbwasCS  mono-traversable-1.0.8.1-FCxSuKblRTODVEp7k4fVIb  nats-1.1.2-31elWvb7mXJGEm39lm6ZG5  network-2.7.0.0-Klo9AvFHXEXEH3Lzayjn0u  network-uri-2.6.1.0-LDdDO4YN4PD3xGsV5ozfaC  old-locale-1.0.0.7-KGBP1BSKxH5GCm0LnZP04j  parsec-3.1.13.0-6f26OhV1xboLx4l77puTQN  psqueues-0.2.7.0-94Rp0Z6dFL1CCwPJIhVZbZ  regex-base-0.93.2-FAqPXYX9UsJ5xC9mG2bESX  regex-posix-0.95.2-DqBrGVkCSgwKH47WudwsWy  resource-pool-0.2.3.2-JsOf4aJlIDWDU8VD1vT0n3  safe-0.3.17-JJATzLtNCBm6FjlfCoRVpi  scientific-0.3.6.2-IcsccVzywYE3hu8262LDNq  scotty-0.11.1-18weEVZu461HmnzeQAuBSS  shortUrl-0.1.0.0  simple-sendfile-0.2.27-CXF7bSD4pL97ZcXUs5DhnF  streaming-commons-0.2.0.0-FdcczMUc7fWBG1v3MmBaSo  tagged-0.8.5-JB8QxbqnIhjLCB2R3uAUj4  text-1.2.3.0-CsLQvkCbOSoGjbNqFpkphE  time-locale-compat-0.1.1.4-Jmg1O4L9NaoGYGG2DN2Zu4  (+12 more)
ch19/shortUrl/.stack-work/install/6db3355d/pkgdb/: aeson-1.4.0.0-9qocgF0L1hMCALuRKJUnP2.conf  ansi-terminal-0.8.0.4-8q4o8UwD6sO3jQwHPHf7u.conf  asn1-types-0.3.2-DVOEL1a3vUoKUmVo85WuhJ.conf  attoparsec-0.13.2.2-1K6XHSMqGc57rQNrMtvLTm.conf  auto-update-0.1.4-EmUvNdmhEju51bHrtaEMpz.conf  base-compat-0.10.1-I0duA57O7WcBf3VDFpA62T.conf  base-orphans-0.7-8S4ts20sdDDGKcsJJT3Axg.conf  basement-0.0.7-1bkOXxfMuXYBANigq80U8F.conf  bsb-http-chunked-0.0.0.2-JedOkvmQVsnDbcn4lfb8xI.conf  bytestring-builder-0.10.8.1.0-EUL7HUZoBoJHHdeLzmqEk9.conf  case-insensitive-1.2.0.11-6v1PL4i0FmaC1BirxkXJub.conf  cereal-0.5.5.0-4mI7cH76utd5msQR92JWfO.conf  colour-2.3.4-Ea5u6v6eyBiFPYOJLx0tkh.conf  conduit-1.3.0.2-6fngg149J6hIfGTtflvqoJ.conf  cookie-0.4.4-LNXu7Vq6XJ39z40mdjLSNY.conf  cryptonite-0.25-HUSUXmfJTZfKtL2BBWx80G.conf  dlist-0.8.0.4-DYoLbOwuv6JKPcpACYZ83L.conf  exceptions-0.10.0-2id30NZdzV4GtnZQrgbP5J.conf  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD.conf  hedis-0.10.2-BnCuzaldMSLJHShrgLxvXV.conf  hourglass-0.2.11-kRAxBgUIAyLwrHsPAnPri.conf  http-date-0.0.7-FRAX856RwwBBE34HQHcHms.conf  http-types-0.12.1-ILi0zHeDNM69IIalWnNAKy.conf  integer-logarithms-1.0.2.1-Cs6q0tn7mAJ1TWj5swCwSq.conf  memory-0.14.16-CSzIDXtB3BZLojekBbov0d.conf  mintty-0.1.2-37PLXrn3IJd2URAjOVRwq6.conf  mono-traversable-1.0.8.1-FCxSuKblRTODVEp7k4fVIb.conf  nats-1.1.2-31elWvb7mXJGEm39lm6ZG5.conf  network-2.7.0.0-Klo9AvFHXEXEH3Lzayjn0u.conf  network-uri-2.6.1.0-LDdDO4YN4PD3xGsV5ozfaC.conf  old-locale-1.0.0.7-KGBP1BSKxH5GCm0LnZP04j.conf  pem-0.2.4-3XE4CtUVO8NHLFzjtZ2Jr2.conf  (+22 more)
ch24/parseIPv6/: README.md  parseIPv6.cabal  stack.yaml
ch24/parseIPv6/lib/: Lib.hs
ch24/parseIPv6/src/: Main.hs
ch26/liftMore/: README.md  TAGS  liftMore.cabal  stack.yaml
ch26/liftMore/src/: Main.hs
ch26/morra/: TAGS  morra.cabal  stack.yaml
ch26/morra/src/: Main.hs
(+1942 files in other folders)
