name:                morra
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/luckysori/morra#readme
license:             BSD3
license-file:        LICENSE
author:              Lucas Soriano del Pino
maintainer:          l.soriano.del.pino@gmail.com
copyright:           2018 Lucas Soriano del Pino
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable morra
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       ansi-terminal,
                       base >= 4.7 && < 5,
                       QuickCheck,
                       random,
                       transformers