name:                semigroups
version:             0.1.0.0
author:              Lucas Soriano
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Semigroups
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.7 && <5
                     , QuickCheck
  hs-source-dirs:      .
  default-language:    Haskell2010